# study.App

./: af.json  agentkey.jks  bigo.json  build.gradle  clash-ipidea-20250609.yaml  cmd  gradle.properties  main.js  new-release-key.jks  settings.gradle  your-release-key.jks
app/: agent_add.jks  agent_retention.jks  build.gradle  lint-baseline.xml
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/agent/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/singbox/arm64-v8a/: config.json
app/src/main/assets/v2ray/arm64-v8a/: config.json  vpoint_vmess_freedom.json
app/src/main/cpp/: CMakeLists.txt  fk_common_struct.h  infoct.cpp
app/src/main/java/com/example/agent/: MainActivity.java
app/src/main/java/com/example/agent/autoJS/: AutoJsUtil.java
app/src/main/java/com/example/agent/config/: ConfigLoader.java
app/src/main/java/com/example/agent/device/: AF设备参数.txt  ChangeDeviceInfoUtil.java  Native.java  bigo设备参数.txt
app/src/main/java/com/example/agent/proxy/: ClashUtil.java
app/src/main/java/com/example/studyapp/: MainActivity.java  ProxyVpnService.java  ScriptRepository.kt
app/src/main/jniLibs/arm64-v8a/: libsingbox.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: AccessibilityServiceConfig.xml  accessibility_service_config.xml  network_security_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+52 files in other folders)
